Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
Few tests - fail - Swapper.* is trying to acquire lock:,at: pci_enable_link_state,but task is already holding lock:,at: pci_walk_bus
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_12907/bat-adlp-6/boot0.txt
<4>[ 11.752845] ============================================
<4>[ 11.752847] WARNING: possible recursive locking detected
<4>[ 11.752849] 6.3.0-rc3-CI_DRM_12907-g3e6be7c63e43+ #1 Not tainted
<4>[ 11.752851] --------------------------------------------
<4>[ 11.752852] swapper/0/1 is trying to acquire lock:
<4>[ 11.752854] ffffffff827ab090 (pci_bus_sem){++++}-{3:3}, at: pci_enable_link_state+0x69/0x1d0
<4>[ 11.752862]
but task is already holding lock:
<4>[ 11.752864] ffffffff827ab090 (pci_bus_sem){++++}-{3:3}, at: pci_walk_bus+0x24/0x90
<4>[ 11.752869]
other info that might help us debug this:
<4>[ 11.752871] Possible unsafe locking scenario:
<4>[ 11.752873] CPU0
<4>[ 11.752874] ----
<4>[ 11.752875] lock(pci_bus_sem);
<4>[ 11.752877] lock(pci_bus_sem);
<4>[ 11.752879]
*** DEADLOCK ***
<4>[ 11.752880] May be due to missing lock nesting notation
<4>[ 11.752882] 2 locks held by swapper/0/1:
<4>[ 11.752884] #0: ffff8881027f11b8 (&dev->mutex){....}-{3:3}, at: __driver_attach+0xab/0x180
<4>[ 11.752890] #1: ffffffff827ab090 (pci_bus_sem){++++}-{3:3}, at: pci_walk_bus+0x24/0x90
<4>[ 11.752895]
stack backtrace:
<4>[ 11.752897] CPU: 6 PID: 1 Comm: swapper/0 Not tainted 6.3.0-rc3-CI_DRM_12907-g3e6be7c63e43+ #1
<4>[ 11.752901] Hardware name: Intel Corporation Alder Lake Client Platform/AlderLake-P DDR4 RVP, BIOS ADLPFWI1.R00.3135.A00.2203251419 03/25/2022
<4>[ 11.752904] Call Trace:
<4>[ 11.752906] <TASK>
<4>[ 11.752907] dump_stack_lvl+0x64/0xb0
<4>[ 11.752911] __lock_acquire+0x9b5/0x2550
<4>[ 11.752915] lock_acquire+0xd6/0x2d0
<4>[ 11.752917] ? pci_enable_link_state+0x69/0x1d0
<4>[ 11.752920] down_read+0x3d/0x180
<4>[ 11.752923] ? pci_enable_link_state+0x69/0x1d0
<4>[ 11.752925] pci_enable_link_state+0x69/0x1d0
<4>[ 11.752928] ? __pfx_vmd_pm_enable_quirk+0x10/0x10
<4>[ 11.752931] vmd_pm_enable_quirk+0x49/0xb0
<4>[ 11.752934] pci_walk_bus+0x6d/0x90
<4>[ 11.752936] vmd_probe+0x75f/0x9d0
<4>[ 11.752939] pci_device_probe+0x95/0x120
<4>[ 11.752942] really_probe+0x164/0x3c0
<4>[ 11.752945] ? __pfx___driver_attach+0x10/0x10
<4>[ 11.752947] __driver_probe_device+0x73/0x170
<4>[ 11.752950] driver_probe_device+0x19/0xa0
<4>[ 11.752953] __driver_attach+0xb6/0x180
<4>[ 11.752955] ? __pfx___driver_attach+0x10/0x10
<4>[ 11.752958] bus_for_each_dev+0x77/0xd0
<4>[ 11.752961] bus_add_driver+0x114/0x210
<4>[ 11.752963] driver_register+0x5b/0x110
<4>[ 11.752965] ? __pfx_vmd_drv_init+0x10/0x10
<4>[ 11.752969] do_one_initcall+0x57/0x270
<4>[ 11.752972] kernel_init_freeable+0x181/0x2e0
<4>[ 11.752976] ? __pfx_kernel_init+0x10/0x10
<4>[ 11.752978] kernel_init+0x15/0x120